--- a/asset/style.css
+++ b/asset/style.css
@@ -55,6 +55,7 @@ body{
     color: white;
     font-weight: bold;
     border: none; 
+    cursor: pointer;
 }
 
 #bottone2{
@@ -203,4 +204,24 @@ body{
 
 .contenitore-sezione{
     margin-top: 5%;
+}
+
+.bottone3{
+    padding: 5px;
+    border-radius: 20px;
+    border-color: rgb(124, 124, 124);
+    background-color: white;
+    color: red;
+    font-weight: bold;
+    margin-left: 1%;
+    cursor: pointer;
+}
+
+.txt{
+    width: 60%;
+    margin-left: 10px;
+    height: 30px;
+    border: 1px solid blue;
+    border-radius: 20px;
+    padding: 5px;
 }
